--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "GeoInterfaceRFC"
 uuid = "092d6370-f8e6-11e9-0b9b-bbd6df571de9"
 authors = ["Yeesian Ng <ngyeesian@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
